重新调整整体面板布局

--- a/src/starcup/resources/StarCupApp.properties
+++ b/src/starcup/resources/StarCupApp.properties
@@ -1,9 +1,9 @@
 # Application global resources
 
-Application.name = StarCup
-Application.title = Basic Application Example
+Application.name = Asteriated Grail
+Application.title = Asteriated Grail
 Application.version = 1.0
-Application.vendor = Sun Microsystems Inc.
+Application.vendor = Akira.Panda
 Application.homepage = http\://appframework.dev.java.net/
 Application.description = A simple Java desktop application based on Swing Application Framework.
 Application.vendorId = Sun
