--- a/src/starcup/ui/desk/resources/PlayerDesk.properties
+++ b/src/starcup/ui/desk/resources/PlayerDesk.properties
@@ -1,11 +1,9 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
-#NOI18N
-jPanel2.background=255, 102, 102
-
-#NOI18N
-jPanel1.background=153, 255, 153
 #NOI18N
 cardImage.icon=/starcup/resources/card/character.jpg
 hello="hello"
+cardImage.text=CARD
+cardImage.toolTipText=CARD
+#NOI18N
+playerPanel.background=255, 102, 102
+#NOI18N
+publicPanel.background=153, 255, 153
