修改手牌区的手牌排列方式

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 #Fri May 13 16:14:12 CST 2011
 compile.on.save=true
 jaxbwiz.endorsed.dirs=D:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
-user.properties.file=C:\\Documents and Settings\\Administrator\\.netbeans\\7.0\\build.properties
+user.properties.file=C:\\Users\\Akira.Pan\\.netbeans\\7.0\\build.properties
