--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,7 +18,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/StarCup.jar
+dist.jar=${dist.dir}/AsteriatedGrail.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
