--- a/trunk/src/starcup/ui/desk/resources/PlayerDesk.properties
+++ b/trunk/src/starcup/ui/desk/resources/PlayerDesk.properties
@@ -7,3 +7,4 @@ cardImage.toolTipText=CARD
 playerPanel.background=255, 102, 102
 #NOI18N
 publicPanel.background=153, 255, 153
+jFormattedTextField1.text=jFormattedTextField1
