--- a/src/starcup/resources/StarCupView.properties
+++ b/src/starcup/resources/StarCupView.properties
@@ -30,3 +30,7 @@ jMenuItem1.text=\u65b0\u6e38\u620f
 exitMenuItem.text=\u9000\u51fa
 createNewGame.Action.text=
 createNewGame.Action.shortDescription=
+jButton1.text=\u653b\u51fb/\u9b54\u6cd5
+jButton2.text=\u8d2d\u4e70
+jButton3.text=\u5408\u6210
+jButton4.text=\u63d0\u70bc
