添加log4j的库，准备打印日志处理

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -21,11 +21,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/AsteriatedGrail.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.log4j-1.2.16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
