--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -21,13 +21,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/AsteriatedGrail.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.log4j-1.2.16.jar}
+    ${file.reference.log4j-1.2.16.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
