--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -2,8 +2,7 @@ log4j.rootLogger=DEBUG,CONSOLE,A1,im
 log4j.addivity.org.apache=true
 # \u5e94\u7528\u4e8e\u63a7\u5236\u53f0
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.Threshold=DEBUG
-log4j.appender.FILE.File=console.log
+log4j.appender.FILE.File=log/console.log
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=[framework] %d - %c -%-4r [%t] %-5p %c %x - %m%n
