--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,6 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
 application.desc=A simple java desktop application based on Swing Application Framework
 application.homepage=http://appframework.dev.java.net
 application.title=Basic Application Example
@@ -20,6 +23,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/AsteriatedGrail.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
@@ -33,6 +37,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -55,6 +61,7 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 main.class=starcup.StarCupApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
@@ -67,5 +74,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+src.core.dir=core
 src.dir=src
 test.src.dir=test
