--- a/trunk/nbproject/private/private.properties
+++ b/trunk/nbproject/private/private.properties
@@ -1,4 +1,8 @@
 #Fri May 13 16:14:12 CST 2011
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 jaxbwiz.endorsed.dirs=D:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
 user.properties.file=C:\\Users\\Akira.Pan\\.netbeans\\7.0\\build.properties
