部分NB的项目设置

--- a/src/starcup/resources/StarCupApp.properties
+++ b/src/starcup/resources/StarCupApp.properties
@@ -6,6 +6,6 @@ Application.version = 1.0
 Application.vendor = Akira.Panda
 Application.homepage = http\://appframework.dev.java.net/
 Application.description = A simple Java desktop application based on Swing Application Framework.
-Application.vendorId = Sun
-Application.id = ${Application.name}
+Application.vendorId = AkiraPanda
+Application.id = Asteriated Grail
 Application.lookAndFeel = system
