--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,9 @@ excludes=
 file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
     ${libs.absolutelayout.classpath}:\
@@ -58,6 +60,15 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=starcup.StarCupApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
