--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 jaxbwiz.endorsed.dirs=D:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
-user.properties.file=C:\\Documents and Settings\\Administrator\\.netbeans\\7.0\\build.properties
+user.properties.file=C:\\Users\\Akira.Pan\\.netbeans\\7.0\\build.properties
