新增类,完成初始化读取CSV卡牌信息的功能

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+file.reference.javacsv.jar=lib\\javacsv.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -35,7 +36,8 @@ javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.log4j-1.2.16.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.javacsv.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
